--- a/src/locales/ca/transformacion.json
+++ b/src/locales/ca/transformacion.json
@@ -52,5 +52,6 @@
   "faq.a3": "Sí, mòdul Fast-Track amb pressupost tancat.",
 
   "cta.title": "Comença avui la teva transformació digital amb garanties",
-  "cta.button": "Reserva la teva sessió gratuïta"
+  "cta.button": "Reserva la teva sessió gratuïta",
+  "cross.cta": "Saber més"
 }
