--- a/src/locales/en/transformacion.json
+++ b/src/locales/en/transformacion.json
@@ -52,5 +52,6 @@
   "faq.a3": "Yes, Fast-Track module with fixed budget.",
 
   "cta.title": "Start your digital transformation today—with guarantees",
-  "cta.button": "Book your free session"
+  "cta.button": "Book your free session",
+  "cross.cta": "See more"
 }
