--- a/src/locales/es/transformacion.json
+++ b/src/locales/es/transformacion.json
@@ -52,5 +52,6 @@
   "faq.a3": "Sí, módulo Fast-Track con presupuesto cerrado.",
 
   "cta.title": "Empieza hoy tu transformación digital con garantías",
-  "cta.button": "Reserva tu sesión gratis"
+  "cta.button": "Reserva tu sesión gratis",
+  "cross.cta": "Saber más"
 }
