--- a/src/locales/fr/transformacion.json
+++ b/src/locales/fr/transformacion.json
@@ -52,5 +52,6 @@
   "faq.a3": "Oui, module Fast-Track avec budget fixé.",
 
   "cta.title": "Lancez votre transformation numérique dès aujourd’hui — avec garanties",
-  "cta.button": "Réserver votre session gratuite"
+  "cta.button": "Réserver votre session gratuite",
+  "cross.cta": "en savoir plus"
 }
